--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -158,7 +158,7 @@
                         <div class="line"></div>
                         <p class="product-price">Fatima Marie Montesclaros</p>
                         <a href="product-details.html">
-                            <h6>White Modern Chair</h6>
+                            <h6>{{product.product_name}}</h6>
                         </a>
                         <!-- Ratings & Review -->
                         <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
