--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -243,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <li id="menu-home" ><a href="{% url 'admin_app:admin_view' %}"><i class="fa fa-tachometer-alt"></i><span>Dashboard</span></a></li>
           <li><a href="#"><i class="fa fa-user"></i><span>Users</span><span class="fa fa-angle-right" style="float: right"></span></a>
             <ul>
-              <li><a href="grids.html">Grids</a></li>
+              <li><a href="{% url 'admin_app:admin_table' %}">View Users</a></li>
               <li><a href="portlet.html">Portlets</a></li>		            
             </ul>
           </li>
