--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -198,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       <div class="profile_img">	
                         <span class="prfil-img"><i class="fa fa-user-alt fa-2x"></i></span> 
                         <div class="user-name">
-                          <p>{{ full_name }}</p>
+                          <p>{{ user.first_name }} {{user.last_name}}</p>
                           <span>Administrator</span>
                         </div>
                         <i class="fa fa-angle-down lnr"></i>
