--- a/templates/report.html
+++ b/templates/report.html
@@ -155,21 +155,18 @@
 						<div class="form-group mb-3">
 							<label
 							  for="report"
-							  >Type of Report</label
-							>
+							  >Type of Report</label>
 							<select
 							  class="custom-select tm-select-accounts"
 							  id="report"
 							  name="report"
 							  required
 							>
-							  <option disabled selected>Select Category</option>
-							  <!-- {% for category in categories %} -->
-							  <!-- {{category.name}} -->
-							  <option value="volvo">Defect Item</option>
+							  <option>Select Category</option>						 
+							  <option>Defect Item</option>
 							  <option>Missing Item</option>
 							  <option>Report User</option>							  
-							  <!-- {% endfor %} -->
+							  
 							</select>
 						  </div>
 
