--- a/templates/profile.html
+++ b/templates/profile.html
@@ -110,19 +110,16 @@
                     </div>
 
                     <div id="View My Trade" class="tabcontent">
-                        <h3>London</h3>
-                         <p>London is the capital city of England.</p>
+                        <h3>My Trade</h3>
+                         <p>Sample Trade</p>
                     </div>
 
                     <div id="View My Reports" class="tabcontent">
-                        <h3>Paris</h3>
-                         <p>Paris is the capital of France.</p> 
+                        <h3>My Reports</h3>
+                         <p>Sample Report</p> 
                     </div>
 
-                    <div id="Tokyo" class="tabcontent">
-                        <h3>Tokyo</h3>
-                        <p>Tokyo is the capital of Japan.</p>
-                    </div>
+                    
 
                 <script>
                     function openCity(evt, cityName) {
