--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -67,19 +67,19 @@
                         <li class="nav-item" role="presentation">
                             <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
                                 <b>0</b>
-                                <span>My Trade</span>
+                                <span>MY TRADE</span>
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">
                                 <b>0</b>
-                                <span>My Offer</span>
+                                <span>MY OFFER</span>
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">
                                 <b>0</b>
-                                <span>My Report</span>
+                                <span>MY REPORT</span>
                             </a>
                         </li>
                     </ul>
