--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -67,28 +67,28 @@
                         <li class="nav-item" role="presentation">
                             <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
                                 <b>0</b>
-                                <span>MY TRADE</span>
+                                <span>TRADES</span>
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">
                                 <b>0</b>
-                                <span>MY OFFER</span>
+                                <span>REPORTS</span>
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">
                                 <b>0</b>
-                                <span>MY REPORT</span>
+                                <span>REVIEWS</span>
                             </a>
                         </li>
                     </ul>
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active text-center" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                            There are no items yet<br>
+                            There are no trades yet<br>
                         </div>
                         <div class="tab-pane fade text-center" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                            There are no exchanges yet<br>
+                            There are no reports yet<br>
                         </div>
                         <div class="tab-pane fade text-center" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                             There are no reviews yet<br>
