--- a/templates/Offers.html
+++ b/templates/Offers.html
@@ -37,10 +37,17 @@ a:hover {
             <div class="row">
               <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
                 <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
+                  {% for offer in offer %}
+                  <div class="product-img">
+                    <p style="float: right; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+                      <img src="{{offer.image.url}}" alt="">
+            
+                  </div>
+                  
                   <div class="row">
                     <form method="POST" action="">
                       <div class="row">
-                          {% for offer in offer %}
+                          
                           <!-- Single Product Area -->
                           <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                               <div class="single-product-wrapper">
@@ -51,12 +58,9 @@ a:hover {
                                       value="{{product.id}}"/>
                                   </div>
                                   <h6>My Offer</h6>
-                                  <div class="product-img">
-                                    <p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-                                      <img src="{{offer.image.url}}" alt="">
-                            
-                                      <img class="hover-img" src="{% static 'images/clothes1.jpg' %}" alt="">
-                                  </div>
+                                  <div class="short_overview my-5">
+                                    <p>{{product.description}} <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quae eveniet culpa officia quidem mollitia impedit iste asperiores nisi reprehenderit consequatur, autem, nostrum pariatur enim?</p>
+                                </div>
     
                                   <div class="product-description d-flex align-items-center justify-content-between product-padding">
                                       <div class="product-meta-data">
@@ -71,16 +75,14 @@ a:hover {
       
                                   <div class="col-12 mt-4">
                                     <a href="#" class="previous round">&#8249;</a>
-                                    <a href="{{offer.image.url}}" class="next round">&#8250;</a>      
+                                    <a href="#" class="next round">&#8250;</a>      
                                  </div>
   
                         </div>
-                        <div class="col-12 mt-4">
-                            <input type="submit" class="btn btn-primary btn-block text-uppercase" value="Update Offer">
-                          </div>
-                        <div class="col-12 mt-4">
-                            <input type="submit" class="btn btn-primary btn-block text-uppercase" value="Delete Offer">
-                          </div>
+                        <div class="cart-btn d-flex mb-50">
+                          <a type="button" class="edit-product-btn" title="Update" data-toggle="modal" data-target="#EditModal-{{product.id}}"><i class="bi bi-pencil-square"></i></i></a>
+                          <a type="submit" name="delete-btn" href="{% url 'user_app:add_offer_view' %}" class="delete-product-btn" data-toggle="tooltip" data-placement="right" title="Delete"><i class="bi bi-trash-fill"></i></i></a>
+                      </div>
                                       
                                   </div>
                               </div>
